<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#e9ffffff">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/bluemain"
        android:id="@+id/delete_shared">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="0"
            android:id="@+id/giftNumberId"
            android:textSize="15sp"
            android:singleLine="false"
            android:textColor="#ffffffff"
            android:layout_marginRight="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:id="@+id/imageView2"
            android:src="@drawable/tresurefinal"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/giftNumberId"
            android:layout_marginRight="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:textSize="14dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/game_instructions"
            android:id="@+id/textView39"
            android:textColor="#ffffff"
            android:layout_alignBottom="@+id/imageView2"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="250dp">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/faantasiapainting"
        />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="9dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:textColor="@color/bluemain"
            android:text="@string/how_to_play_sec"
            android:id="@+id/how_to_play_id"
            />
        <ImageView
            android:layout_width="20dp"
            android:layout_marginLeft="9dp"
            android:layout_height="20dp"
            android:src="@drawable/coin_map1"

            />
        <ImageView
            android:layout_width="20dp"
            android:layout_marginLeft="9dp"
            android:layout_height="20dp"
            android:src="@drawable/coin_map1"

            />
        <ImageView
            android:layout_width="20dp"
            android:layout_marginLeft="9dp"
            android:layout_height="20dp"
            android:src="@drawable/coin_map1"

            />

    </LinearLayout>
  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content">
      <TextView
          android:layout_width="wrap_content"
          android:textSize="12dp"
          android:layout_marginRight="9dp"
          android:layout_height="wrap_content"
          android:layout_marginLeft="9dp"
          android:text="@string/how_to_play_txt"
          />


  </LinearLayout>

</LinearLayout>